[tool.poetry]
name = "PySSHHelper"
version = "0.1.1"
description = "Python library for executing commands interactively over SSH including sudo su - priveleges"
authors = ["Max <PySSHHelper@proton.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "PySSHHelper", from="." },
]

[tool.poetry.urls]
Homepage = "https://github.com/xeonvs/PySSHHelper"
Issues = "https://github.com/xeonvs/PySSHHelper/issues"

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^3.4"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
